@@ -1,5 +1,14 @@
 2007-10-13  Vitaly Alexeev <tishka92@yahoo.com>
 
+		* base/tu_loadlib.cpp: added "lib" before path to shared library
+		* gameswf/gameswf_as_classes/as_broadcaster.cpp: listener should be once in the queue
+		* gameswf/gameswf_as_classes/as_db.cpp
+		* gameswf/gameswf_as_classes/as_db.h : added socket parameter
+		* gameswf/samples/test_mysql.fla
+		* gameswf/samples/test_mysql.swf
+
+2007-10-13  Vitaly Alexeev <tishka92@yahoo.com>
+
 		* gameswf/gameswf_action.cpp
 		* gameswf/gameswf_action.h
 		* gameswf/gameswf_test_ogl.cpp
